# colcon-package-selection

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_package_selection/: argument.py
colcon_package_selection/package_discovery/: ignore.py
colcon_package_selection/package_selection/: dependencies.py  path.py  select_skip.py  start_end.py  whitelist_blacklist.py
colcon_package_selection/package_selection/previous/: __init__.py  event_handler.py  package_selection.py
colcon_package_selection/package_selection/resume/: __init__.py  event_handler.py  package_selection.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
