[metadata]
name = colcon-package-selection
version = attr: colcon_package_selection.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-package-selection/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to select the packages to process.
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_core.package_augmentation =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_discovery =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_selection =
    dependencies = colcon_package_selection.package_selection.dependencies:DependenciesPackageSelection
    select_skip = colcon_package_selection.package_selection.select_skip:SelectSkipPackageSelectionExtension
    start_end = colcon_package_selection.package_selection.start_end:StartEndPackageSelection
