[metadata]
name = colcon-package-selection
version = attr: colcon_package_selection.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-package-selection/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-package-selection/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to select the packages to process.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-package-selection

[options.entry_points]
colcon_core.event_handler =
    log_finished = colcon_package_selection.package_selection.resume.event_handler:LogFinishedEventHandler
colcon_core.package_augmentation =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_discovery =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_selection =
    dependencies = colcon_package_selection.package_selection.dependencies:DependenciesPackageSelection
    select_skip = colcon_package_selection.package_selection.select_skip:SelectSkipPackageSelectionExtension
    skip_previous = colcon_package_selection.package_selection.resume.package_selection:SkipPreviousPackageSelectionExtension
    start_end = colcon_package_selection.package_selection.start_end:StartEndPackageSelection

[flake8]
import-order-style = google
