[metadata]
name = colcon-package-selection
version = attr: colcon_package_selection.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-package-selection/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-package-selection/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to select the packages to process.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.3.19
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-package-selection

[options.entry_points]
colcon_core.event_handler =
    store_result = colcon_package_selection.package_selection.previous.event_handler:StoreResultEventHandler
colcon_core.package_augmentation =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_discovery =
    ignore = colcon_package_selection.package_discovery.ignore:IgnorePackageDiscovery
colcon_core.package_selection =
    dependencies = colcon_package_selection.package_selection.dependencies:DependenciesPackageSelection
    previous = colcon_package_selection.package_selection.previous.package_selection:PreviousPackageSelectionExtension
    select_skip = colcon_package_selection.package_selection.select_skip:SelectSkipPackageSelectionExtension
    start_end = colcon_package_selection.package_selection.start_end:StartEndPackageSelection

[flake8]
import-order-style = google

[coverage:run]
source = colcon_package_selection
